tests/e2e/operator_assignment_bool.error
Error: syntax error in story at line 2, column 1

2|    a += 1
      ^^^^^^

E0103: `+` between `boolean` and `int` is not supported.
