tests/e2e/operator_assignment_bool.story
a = true
a += 1
